--- a/mood.html
+++ b/mood.html
@@ -9,7 +9,7 @@
         rel="stylesheet"
     />
 
-    <link href="test.css" rel="stylesheet" />
+    <link href="mood.css" rel="stylesheet" />
 </head>
 <body>
     <header>
