--- a/routine.html
+++ b/routine.html
@@ -37,10 +37,9 @@
         </div>
 
         <p class="mood-intro-text">
-            FILM 페이지에서 다섯 편의 작품을 선정했다면, SCENE에서는 그 영화들이 남긴 가장 깊은 '순간의 잔상' 을 기록합니다.
-            <br>잊을 수 없는 명장면 스틸컷과 함께, 그 순간의 대사와 지극히 개인적인 코멘트를 나란히 배치했습니다. 
-            <br>하나의 프레임, 단 한 줄의 대사가 당신에게 어떤 감정적 공명을 일으켰는지 되돌아봅니다.
-            <br>시각적 미학과 서사의 절정이 교차하는 이 장면들을 통해, 프레임 너머의 감동을 수집하고 우리의 내면을 통과한 감정의 흐름을 선명하게 기록하세요.
+            지금까지 영화에 대해 깊숙하게 탐험했다면, ROUTINE에서는 영화를 대하는 나의 방식을 완성합니다.
+            <br>이 페이지는 영화 그 자체를 넘어, 나의 관람 경험을 규정하는 모든 외적인 요소를 기록합니다. 
+            <br>영화를 하나의 의식으로 만드는 개인화된 루틴을 기록하며, 왜 그 영화를 보는지 못지않게 어떻게 영화를 대하는지를 되돌아봅니다. 
         </p>
     </section>
 
